# fx

./: .gitignore  pyproject.toml
fx/: convenient.py  file.py  folder.py  location.py
tests/: test_convenience.py  test_file_class.py
