[tool.poetry]
name = "fx"
version = "0.1.0"
description = ""
authors = [
    "Tyler Jowers <jowerstc@outlook.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
fx = "fx:fx"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
